[tabbox] fix non-working global shortcuts overrides

static cuts[] array was initialized only once with copies of non-const
objects, so when new shortcuts are configured, the old objects were still
referenced.
Fixed by having non-static array instead, so actual objects are copied
on the init every time.

BUG: 359141


(cherry picked from commit 471d635f0c6844cf5b99baa73b2142c9d89d9471)